# Robotica

follow_ball/: .cproject  .project  CMakeLists.txt  package.xml
follow_ball/Debug/: makefile
follow_ball/Debug/src/: subdir.mk
follow_ball/include/follow_ball/: PIDController.h
follow_ball/launch/: follow_ball.launch
follow_ball/msg/: Position.msg
follow_ball/src/: PIDController.cpp  go_ball.cpp  node_image_ball.cpp
follow_ball_3d/: .cproject  .project  CMakeLists.txt  package.xml
follow_ball_3d/Debug/: makefile
follow_ball_3d/Debug/src/: subdir.mk
follow_ball_3d/launch/: follow_ball_3d.launch
follow_ball_3d/msg/: Obstacles.msg
follow_ball_3d/src/: Actue_Node.cpp  Actue_Node.cpp.save  Percept_Node.cpp  Percept_Node.cpp.save  Scan_Node.cpp  Scan_Node.cpp.save
follow_line/: CMakeLists.txt  package.xml
follow_line/launch/: follow_line.launch
follow_line/msg/: Shift.msg
follow_line/src/: kobuki_correcting.cpp  node_image.cpp
navigation/csuro_navigation/: .cproject
navigation/csuro_navigation/include/csuro_navigation/: csuro_global_planner.h
navigation/csuro_navigation/launch/: localization.launch  navigation.launch  slam_mapping.launch
navigation/csuro_navigation/maps/: casa.pgm  casa.yaml  lab15.pgm  lab15.yaml  laberinto.pgm  laberinto.yaml
navigation/csuro_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
navigation/csuro_navigation/src/: csuro_global_planner.cpp
