<?xml version="1.0"?>
<package>
  <name>follow_line</name>
  <version>0.0.0</version>
  <description>Paquete para sigue lineas</description>

  <maintainer email="fj.gutierrezs91@gmail.com">Javi</maintainer>
  <license>BSD</license>
  <url type="website">www.google.es</url>

  <author email="fj.gutierrezs91@gmail.com">Javier Gutierrez-Maturana</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>